crates/service/tests/code_action/snapshots/features__code_action__if_br_to_br_if__folded_without_condition.snap
---
source: crates/service/tests/code_action/if_br_to_br_if.rs
expression: response
---
[
  {
    "title": "Convert `if` with `br` to `br_if`",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 4
              },
              "end": {
                "line": 3,
                "character": 7
              }
            },
            "newText": ""
          },
          {
            "range": {
              "start": {
                "line": 4,
                "character": 6
              },
              "end": {
                "line": 5,
                "character": 15
              }
            },
            "newText": "(br_if 0)"
          },
          {
            "range": {
              "start": {
                "line": 5,
                "character": 15
              },
              "end": {
                "line": 5,
                "character": 16
              }
            },
            "newText": ""
          }
        ]
      }
    }
  }
]
