crates/service/tests/code_action/snapshots/features__code_action__if_br_to_br_if__sequence_with_condition.snap
---
source: crates/service/tests/code_action/if_br_to_br_if.rs
expression: response
---
[
  {
    "title": "Convert `if` with `br` to `br_if`",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 4,
                "character": 4
              },
              "end": {
                "line": 6,
                "character": 7
              }
            },
            "newText": "br_if 0"
          }
        ]
      }
    }
  }
]
